fix: When not inline-editing the dialog for text-enabled plugins is too small, and not resizable.

--- a/private/css/cms.dialog.css
+++ b/private/css/cms.dialog.css
@@ -1,5 +1,5 @@
 
-dialog.cms-dialog {
+#cms-top dialog.cms-dialog {
     padding: 0;
     resize: both;
     top: 50%;
